[package]
name = "askit-std-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-stream-kit = { path = "../agent-stream-kit" }
async-trait = "0.1"
log = "0.4.25"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
