[package]
name = "askit-std-agents"
version = "0.1.3"
edition = "2024"
description = "Standard Agents of Agent Stream Kit"
authors = ["Akira Ishino <akira@lumilab.jp>"]
license = "Apache-2.0 OR MIT"

[dependencies]
agent-stream-kit = "0.1"
async-trait = "0.1"
chrono = "0.4.42"
cron = "0.15.0"
handlebars = "6.3.2"
log = "0.4.28"
regex = "1.11.2"
serde_json = "1"
tokio = { version = "1", features = ["time"] }

#[patch.crates-io]
#agent-stream-kit = { path = "../../agent-stream-kit" }
